--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -7,5 +7,9 @@
         <key>NSAllowsArbitraryLoads</key>
         <true/>
     </dict>
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>com.tweet.upload</string>
+    </array>
 </dict>
 </plist> 
