action button bug fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
+Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
