cache valid tweet only

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
+.DS_Store
