--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 .DS_Store
 ./ffmpeg-ios/
+build.log
+build_output.txt
