--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Tweet.xcworkspace/xcuserdata/cfa532.xcuserdatad/UserInterfaceState.xcuserstate
 ./ffmpeg-ios/
 build.log
 build_output.txt
+.DS_Store
