--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -11,5 +11,13 @@
     <array>
         <string>com.tweet.upload</string>
     </array>
+    <key>CFBundleLocalizations</key>
+    <array>
+        <string>en</string>
+        <string>zh-Hans</string>
+        <string>ja</string>
+    </array>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>en</string>
 </dict>
 </plist> 
