background message check

--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -10,6 +10,7 @@
     <key>BGTaskSchedulerPermittedIdentifiers</key>
     <array>
         <string>com.tweet.upload</string>
+        <string>com.example.Tweet.messageCheck</string>
     </array>
     <key>CFBundleLocalizations</key>
     <array>
