--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -20,5 +20,7 @@
     </array>
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app uses the camera to allow you to take photos for your replies and tweets.</string>
 </dict>
 </plist> 
