--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -2,27 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
-    <key>BGTaskSchedulerPermittedIdentifiers</key>
-    <array>
-        <string>com.tweet.upload</string>
-        <string>com.example.Tweet.messageCheck</string>
-    </array>
-    <key>CFBundleLocalizations</key>
-    <array>
-        <string>en</string>
-        <string>zh-Hans</string>
-        <string>ja</string>
-    </array>
-    <key>CFBundleDevelopmentRegion</key>
-    <string>en</string>
-    <key>NSCameraUsageDescription</key>
-    <string>This app uses the camera to allow you to take photos for your replies and tweets.</string>
-    <key>NSUserNotificationUsageDescription</key>
-    <string>This app uses notifications to alert you about new chat messages.</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.tweet.upload</string>
+		<string>com.example.Tweet.messageCheck</string>
+	</array>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>zh-Hans</string>
+		<string>ja</string>
+	</array>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses the camera to allow you to take photos for your replies and tweets.</string>
+	<key>NSUserNotificationUsageDescription</key>
+	<string>This app uses notifications to alert you about new chat messages.</string>
 </dict>
-</plist> 
+</plist>
