--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # GitHub Pages configuration for M2O Support
 title: M2O Support
 description: Get help with your M2O app experience
-url: "https://yourusername.github.io"
+url: "https://cfa532.github.io"
 baseurl: "/Tweet-iOS"
 
 # Build settings
