--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -23,7 +23,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>NSCameraUsageDescription</key>
-	<string>This app uses the camera to allow you to take photos for your replies and tweets.</string>
+	<string>This app uses the camera to allow you to take photos and record videos for your replies and tweets.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app uses the microphone to record audio for videos you create with the camera.</string>
 	<key>NSUserNotificationUsageDescription</key>
 	<string>This app uses notifications to alert you about new chat messages.</string>
 </dict>
