--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -26,6 +26,8 @@
 	<string>This app uses the camera to allow you to take photos and record videos for your replies and tweets.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app uses the microphone to record audio for videos you create with the camera.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photo library to save captured photos and videos.</string>
 	<key>NSUserNotificationUsageDescription</key>
 	<string>This app uses notifications to alert you about new chat messages.</string>
 </dict>
