--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -23,12 +23,12 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>NSCameraUsageDescription</key>
-	<string>This app uses the camera to allow you to take photos and record videos for your replies and tweets.</string>
+	<string>dTweet needs camera access to let you capture photos and videos for your tweets and replies. You can create rich media content to share with your followers.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>This app uses the microphone to record audio for videos you create with the camera.</string>
+	<string>dTweet needs microphone access to record audio when you create video tweets and replies. This allows you to add voice narration to your video content.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app needs access to your photo library to save captured photos and videos.</string>
+	<string>dTweet needs photo library access to save your captured photos and videos, and to let you select existing media for your tweets and replies.</string>
 	<key>NSUserNotificationUsageDescription</key>
-	<string>This app uses notifications to alert you about new chat messages.</string>
+	<string>dTweet uses notifications to keep you updated about new chat messages, mentions, and important updates from your network.</string>
 </dict>
 </plist>
