--- a/Tweet/Info.plist
+++ b/Tweet/Info.plist
@@ -23,12 +23,12 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>NSCameraUsageDescription</key>
-	<string>dTweet needs camera access to let you capture photos and videos for your tweets and replies. You can create rich media content to share with your followers.</string>
+	<string>$(NSCameraUsageDescription)</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>dTweet needs microphone access to record audio when you create video tweets and replies. This allows you to add voice narration to your video content.</string>
+	<string>$(NSMicrophoneUsageDescription)</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>dTweet needs photo library access to save your captured photos and videos, and to let you select existing media for your tweets and replies.</string>
+	<string>$(NSPhotoLibraryUsageDescription)</string>
 	<key>NSUserNotificationUsageDescription</key>
-	<string>dTweet uses notifications to keep you updated about new chat messages, mentions, and important updates from your network.</string>
+	<string>$(NSUserNotificationUsageDescription)</string>
 </dict>
 </plist>
